# proto-ia

./: .env.example  README.md  pyproject.toml
data/: knowledge_base.json  policies.json  resolved_tickets.json
tickets/: ticket_001.json  ticket_002.json  ticket_003.json
