[project]
name = "AI-CustomerCare"
version = "1.0.0"
description = "AI Customer Care Project"
requires-python = ">=3.13.7"
dependencies = [
    "celery>=5.6.0",
    "fastapi>=0.123.8",
    "jinja2>=3.1.6",
    "openai>=1.50.0",
    "pgvector>=0.3.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.26",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "requests>=2.32.0",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.0",
    "tiktoken>=0.12.0",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "graphviz>=0.21",
    "ipykernel>=7.1",
    "ipython>=9.8.0",
    "nest-asyncio>=1.6.0",
    "ruff>=0.14.8",
]

[tool.ruff]
exclude = [".venv", "app/core/commands", "app/alembic", ".sh"]
